--- a/KrasamoStockTracker/Info.plist
+++ b/KrasamoStockTracker/Info.plist
@@ -23,4 +23,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	
+	<string>Main</string>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<s
