--- a/KrasamoStockTracker/Info.plist
+++ b/KrasamoStockTracker/Info.plist
@@ -28,4 +28,7 @@
 	<array>
 		<string>armv7</string>
 	</array>
-	<key>UISupportedInterfaceOrientatio
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIIn
