--- a/KrasamoStockTracker/Info.plist
+++ b/KrasamoStockTracker/Info.plist
@@ -37,4 +37,5 @@
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOri
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</s
