--- a/KrasamoStockTrackerTests/Info.plist
+++ b/KrasamoStockTrackerTests/Info.plist
@@ -7,4 +7,6 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<strin
