--- a/KrasamoStockTrackerTests/Info.plist
+++ b/KrasamoStockTrackerTests/Info.plist
@@ -14,4 +14,7 @@
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
-	<key>CFBundleShortVer
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>CFBundleVersion</key>
+	<string>1
