--- a/KrasamoStockTrackerTests/Info.plist
+++ b/KrasamoStockTrackerTests/Info.plist
@@ -17,4 +17,6 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1
+	<string>1</string>
+</dict>
+</plist>
